--- a/apps/staging/podinfo-values.yaml
+++ b/apps/staging/podinfo-values.yaml
@@ -12,7 +12,7 @@ spec:
   values:
     ingress:
       hosts:
-        - host: podinfo.staging
+        - host: portal.test-dataplatform.online
           paths:
             - path: /
               pathType: ImplementationSpecific
