--- a/apps/staging/podinfo-values.yaml
+++ b/apps/staging/podinfo-values.yaml
@@ -16,3 +16,7 @@ spec:
           paths:
             - path: /
               pathType: ImplementationSpecific
+      tls:
+       - secretName: podinfo-tls
+         hosts:
+           - podinfo.test-dataplatform.online
